force-app/main/default/objects/Checklist_Details__c/Checklist_Details__c.object-meta.xml
<CustomObject>
    <label>Checklist Details</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Checklist Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>