force-app/main/default/objects/Checklist_Details__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User this routing is assigned too.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>