force-app/main/default/objects/Checklist_Details__c/fields/Check_type__c.field-meta.xml
<CustomField>
    <fullName>Check_type__c</fullName>
    <label>Check type</label>
    <length>65</length>
    <type>Text</type>
</CustomField>