force-app/main/default/objects/Checklist_Details__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <formula>IF(
    ISPICKVAL(Status__c, &quot;Accepted&quot;) || ISPICKVAL(Status__c, &quot;Approved&quot;),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>