force-app/main/default/objects/Checklist_Details__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cleared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>