force-app/main/default/objects/Checklist_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Display_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Assignment__c</columns>
    <columns>Status_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>